Fixing spacing around header text

--- a/assets/src/less/components/section.less
+++ b/assets/src/less/components/section.less
@@ -43,7 +43,6 @@
     h1 {
       font-size: 4em;
       font-family: 'Clicker Script', sans-serif;
-      margin-bottom: 0;
 
       small {
         font-size: 1.5rem;
